# VoiceAI

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  Untitled  docker-compose.yml  tasks.md
agents/: __init__.py  browser_session.py  command_channel.py  evidence_emitter.py  lifecycle.py  pool.py  schemas.py
backend/: .vercelignore  config.py  deps.py  logging_config.py  main.py  metrics.py  pyproject.toml  tracing.py  vercel.json
backend/demo/: __init__.py  demo_runner.py
backend/evidence/: clustering.py  contradictions.py  dlq.py  embedding_pipeline.py  repository.py  router.py  schemas.py  scoring.py  screenshot.py  theme_labeler.py  vector_store.py
backend/gateway/: vad.py  voice_gateway.py  ws_relay.py
backend/missions/: repository.py  router.py  schemas.py
backend/models/: __init__.py  embedding_client.py  lite_client.py  sonic_client.py  sonic_tools.py
backend/orchestrator/: __init__.py  aggregator.py  assignment.py  context_packet.py  planning_loop.py  reallocation.py  stopping.py  task_graph.py  watchdog.py
backend/routers/: demo.py  internal.py
backend/streaming/: channels.py  ws_relay.py
backend/synthesis/: briefing.py  pre_synthesis.py  spoken_briefing.py
backend/tests/: conftest.py  test_evidence_phase_a.py  test_integration.py  test_observability.py  test_orchestrator_loop.py  test_phase_bc.py  test_smoke.py
demo/: load_test.py  mock_evidence.json  run_demo.sh  seed_sequoia.py
docs/: DEMO.md  ENV.md  EVENTS.md  FRONTEND_STREAMING.md  IAM.md  LOGGING.md  VERCEL.md  VOICE_FORMAT.md  architecture.mmd
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
infra/: init.sql
mission-control-v2/: package-lock.json  package.json
models/: MOVED.md  __init__.py  lite_client.py  sonic_client.py  sonic_tools.py
team-tasks/: bharath-gera.md  chinmay-shringi.md  manav-parikh.md  rahil-singhi.md  sariya-rizwan.md
tests/: test_agents_async.py  test_agents_core.py
(+83 files in other folders)
