[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "missioncontrol-backend"
version = "0.1.0"
description = "Mission Control (Dispatch) FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "boto3>=1.34",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "structlog>=24.1",
    "openai>=1.30",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "anyio[trio]",
    "ruff",
    "black",
]

[tool.setuptools]
py-modules = ["main", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
