[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "missioncontrol-backend"
version = "0.1.0"
description = "Mission Control (Dispatch) FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "boto3>=1.34",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "structlog>=24.1",
    "openai>=1.30",
    "tenacity>=8.3",
    "websockets>=12.0",
    "numpy>=1.26",
    "aws-xray-sdk>=2.12",
]

[project.scripts]
app = "main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "anyio[trio]",
    "ruff",
    "black",
    "moto[s3]>=5.0",
    "hdbscan>=0.8",
]

[tool.setuptools]
packages = ["models", "missions", "evidence", "streaming", "gateway", "orchestrator", "synthesis"]
py-modules = ["main", "config", "deps", "metrics", "tracing"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
